[gd_scene load_steps=3 format=2]

[ext_resource path="res://data/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/Actors/Child.gd" type="Script" id=2]

[node name="Child" instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 2147483723
script = ExtResource( 2 )
speed = 300
jumpForce = 400
detect_radius = 300.0

[node name="DetectPlayer" type="Area2D" parent="." index="3"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer" index="0"]

[node name="HoverArea" type="Area2D" parent="." index="7"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea" index="0"]
disabled = true

[node name="PinJoint2D" type="PinJoint2D" parent="." index="8"]
position = Vector2( 0, 16 )
node_a = NodePath("..")
disable_collision = false

[node name="RayCast2D" type="RayCast2D" parent="." index="9"]
enabled = true
collision_mask = 8

[node name="CaptureArea" type="Area2D" parent="." index="10"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaptureArea" index="0"]

[node name="Tween" type="Tween" parent="." index="11"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="mouse_entered" from="HoverArea" to="." method="_on_HoverArea_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_HoverArea_mouse_exited"]
[connection signal="body_entered" from="CaptureArea" to="." method="_on_CaptureArea_body_entered"]
[connection signal="body_exited" from="CaptureArea" to="." method="_on_CaptureArea_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
